feat: crud product

--- a/src/main/resources/templates/admin/products/list.html
+++ b/src/main/resources/templates/admin/products/list.html
@@ -92,6 +92,9 @@
 
     </style>
     <h2>Product List For Admin</h2>
+    <a href="/admin/products/add">
+        <button>Add New Product</button>
+    </a>
     <table>
         <thead>
         <tr>
